fix(flat-components): close popover when click popMenu element (#1646)
* fix(flat-components): close popover when click popMenu element

* fix(flat-components): camera screen is too large

--- a/packages/flat-components/src/components/DeviceTestPage/CameraTest/style.less
+++ b/packages/flat-components/src/components/DeviceTestPage/CameraTest/style.less
@@ -7,6 +7,7 @@
     height: 240px;
     width: 100%;
     position: relative;
+    overflow: hidden;
     border-radius: 6px;
     background-color: #000;
 }
